# cadquery

./: .coverage  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.md  Bancada  CITATION.cff  Dockerfile  Dockerfile.python3.7  LICENSE  MANIFEST  MANIFEST.in  Mesa  README.md  README.txt  activate.sh  appveyor.yml  assy.wrl  assy.xml  azure-pipelines.yml  build-docs.sh  build_docker.sh  cadquery.sh  changes.md  conda-build.yml  conda-py3-freecad.yml  conda_build.bat  conda_build.sh  conda_build_config.yaml  conda_deploy.sh  cq_cmd.py  cq_cmd.sh  environment.yml  fail.py  funding.json  meta.yaml  mypy.ini  nested.step  (+17 more)
.circleci/: config.yml
.github/: FUNDING.yml
.well-known/: funding-manifest-urls
cadquery/: CQ.py  README.txt  __init__.py  assembly.py  cq.py  cq_directive.py  cqgi.py  fig.py  func.py  hull.py  logs.py  materials.py  mcp_server.py  selectors.py  sketch.py  types.py  units.py  utils.py  vis.py  workplane.py
cadquery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
conda/: meta.yaml
doc/: README  apireference.rst  assy.rst  cadquerybasics.rst  citing.rst  classreference.rst  conf.py  cqgi.rst  designprinciples.rst  examples.rst  extending.rst  fileformat.rst  free-func.rst  gen_colors.py  importexport.rst  index.rst  installation.rst  intro.rst  make.bat  primer.rst  quickstart.rst  roadmap.rst  selectors.rst  sketch.rst  vis.rst  vslot-2020_1.dxf  workplane.rst
docker/: .gitignore  Dockerfile  Dockerfile-conda  cadquery.sh  readme.md
examples/: CQ_examples.ipynb  EX102_Live_Vis.py  Ex001_Simple_Block.py  (+34 more)
(+173 files in other folders)
